# breach-radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLANO.md  README.md  TEST_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: cacfe7a705cd_create_breaches_table.py
app/: config.py  database.py  etag.py  filters.py  hibp_client.py  logging_config.py  main.py  models.py  scheduler.py  schemas.py  sync.py  validators.py
app/routers/: breaches.py  sync.py
legacy/: BUGS_FOUND.md  breach_matcher.py
tests/: conftest.py  test_breaches_detail.py  test_breaches_list_filters.py  test_breaches_pagination.py  test_database.py  test_etag.py  test_hibp_client.py  test_logging_config.py  test_main.py  test_resilience.py  test_scheduler.py  test_sync.py  test_validators.py
tests/fixtures/: hibp_sample.json
tests/legacy/: test_breach_matcher.py
