[project]
name = "breach-radar"
version = "0.1.0"
description = "API REST que sincroniza e expoe o catalogo de breaches da HIBP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov=legacy --cov-report=term-missing --cov-fail-under=80"
